--- a/springboot-core/src/main/resources/application.properties
+++ b/springboot-core/src/main/resources/application.properties
@@ -1,5 +1,13 @@
 
 server.port=80
 
+#security.basic.enabled = false
 
-security.basic.enabled = false
+#数据库配置
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+spring.datasource.username=stats
+spring.datasource.password=stats
+
+#mybatis开启驼峰命名转换
+mybatis.configuration.map-underscore-to-camel-case=true
