--- a/springboot-core/src/main/resources/application.properties
+++ b/springboot-core/src/main/resources/application.properties
@@ -3,11 +3,11 @@ server.port=80
 
 #security.basic.enabled = false
 
-#Êı¾İ¿âÅäÖÃ
+#æ•°æ®åº“é…ç½®
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
 spring.datasource.username=stats
 spring.datasource.password=stats
 
-#mybatis¿ªÆôÍÕ·åÃüÃû×ª»»
+#mybatisé©¼å³°å‘½å
 mybatis.configuration.map-underscore-to-camel-case=true
