--- a/springboot-core/src/main/resources/application.properties
+++ b/springboot-core/src/main/resources/application.properties
@@ -11,3 +11,13 @@ spring.datasource.password=stats
 
 #mybatis驼峰命名
 mybatis.configuration.map-underscore-to-camel-case=true
+
+# Redis数据库索引（默认为0）
+spring.redis.database=0
+# Redis服务器地址
+spring.redis.host=127.0.0.1
+# Redis服务器连接端口
+spring.redis.port=6379
+# Redis服务器连接密码（默认为空）
+spring.redis.password=
+
