--- a/springboot-core/src/main/resources/application.properties
+++ b/springboot-core/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
 spring.datasource.username=stats
 spring.datasource.password=stats
 
+mybatis.typeAliasesPackage: com.huajiance.springboot.entity
+mybatis.mapperLocations: classpath:com.huajiance.springboot.mapper/*.xml
+
 #mybatis驼峰命名
 mybatis.configuration.map-underscore-to-camel-case=true
 
