更新登录方法

--- a/springboot-core/src/main/resources/application.properties
+++ b/springboot-core/src/main/resources/application.properties
@@ -12,6 +12,10 @@ spring.datasource.password=stats
 #mybatis驼峰命名
 mybatis.configuration.map-underscore-to-camel-case=true
 
+mybatis:
+    mapper-locations: classpath:com/huajiance/springboot/mapping/*Mapper.xml
+    type-aliases-package: com.huajiance.springboot.entity
+
 # Redis数据库索引（默认为0）
 spring.redis.database=0
 # Redis服务器地址
