--- a/springboot-core/src/main/resources/application.properties
+++ b/springboot-core/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=80
 
 #数据库配置
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+spring.datasource.url=jdbc:oracle:thin:@10.16.2.59:1521:orcl
 spring.datasource.username=stats
 spring.datasource.password=stats
 
