--- a/springboot-core/src/main/resources/application.properties
+++ b/springboot-core/src/main/resources/application.properties
@@ -5,21 +5,19 @@ server.port=80
 
 #数据库配置
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@10.16.2.59:1521:orcl
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
 spring.datasource.username=stats
 spring.datasource.password=stats
 
-mybatis.type-aliases-package=com.huajiance.springboot.entity
-mybatis.mapper-locations=classpath*:com.huajiance.springboot.mapper/*.xml
-#mybatis.typeAliasesPackage=com.huajiance.springboot.entity
-#mybatis.mapperLocations=classpath:com.huajiance.springboot.mapper/*.xml
+mybatis.typeAliasesPackage: com.huajiance.springboot.entity
+mybatis.mapperLocations: classpath:com.huajiance.springboot.mapper/*.xml
 
 #mybatis驼峰命名
 mybatis.configuration.map-underscore-to-camel-case=true
-#
-#mybatis:
-#    mapper-locations: classpath:com/huajiance/springboot/mapping/*Mapper.xml
-#    type-aliases-package: com.huajiance.springboot.entity
+
+mybatis:
+    mapper-locations: classpath:com/huajiance/springboot/mapping/*Mapper.xml
+    type-aliases-package: com.huajiance.springboot.entity
 
 # Redis数据库索引（默认为0）
 spring.redis.database=0
