--- a/springboot-core/src/main/resources/application.properties
+++ b/springboot-core/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 
 server.port=80
 
-#security.basic.enabled = false
-
 #数据库配置
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
@@ -10,16 +8,10 @@ spring.datasource.username=stats
 spring.datasource.password=stats
 
 mybatis.type-aliases-package=com.huajiance.springboot.entity
-mybatis.mapper-locations=classpath*:com.huajiance.springboot.mapper/*.xml
-#mybatis.typeAliasesPackage=com.huajiance.springboot.entity
-#mybatis.mapperLocations=classpath:com.huajiance.springboot.mapper/*.xml
+mybatis.mapper-locations=classpath*:mapping/*.xml
 
 #mybatis驼峰命名
 mybatis.configuration.map-underscore-to-camel-case=true
-#
-#mybatis:
-#    mapper-locations: classpath:com/huajiance/springboot/mapping/*Mapper.xml
-#    type-aliases-package: com.huajiance.springboot.entity
 
 # Redis数据库索引（默认为0）
 spring.redis.database=0
