--- a/springboot-core/src/main/resources/application.properties
+++ b/springboot-core/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 
 server.port=80
 
+spring.mvc.view.prefix=/views/
+spring.mvc.view.suffix=.html
+
 #数据库配置
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
